---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: 2020-08-21
  Bugfixes:
    - Wait for initial dialog to display until the cutscene is over.
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 2020-07-18
  Bugfixes:
    - Fixed loading robot sounds in Factorio 0.18.36.
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 2020-06-07
  Info:
    - Add void lab that just deletes science packs.
    - Add void technology that (hopefully) researches endlessly. You can change the base time for this technology in the mod settings.
---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: 2020-06-06
  Bugfixes:
    - Fix bug with printing tables in event logging.
    - Clamp values to safe ranges before applying cheats.
---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 2020-06-02
  Info:
    - Event on_player_setup_blueprint now prints the 'mapping' table.
  Bugfixes:
    - Placing Creative Mod items now work again. Items were not registered after reviving.
---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 2020-05-28
  Bugfixes:
    - One more fix with destroy event using the magic wand alt mode.
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2020-05-28
  Bugfixes:
    - Lots of fixes concerning the built/revive/destroy event raises.
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2020-05-27
  Info:
    - Update mod to Factorio 0.18.27. (Thanks to DidierLoiseau for the quick fix!)